feat: new music room and server agent